// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingSpinner renders LoadingSpinner correctly Dark Mode 1`] = `
<div>
  <div
    class="css-1ffdipv"
  >
    <span
      style="display: inherit;"
    >
      <span
        style="display: inline-block; background-color: rgb(255, 255, 255); width: 8px; height: 8px; margin: 2px; border-radius: 100%; animation: react-spinners-BeatLoader-beat 0.7s 0s infinite linear; animation-fill-mode: both;"
      />
      <span
        style="display: inline-block; background-color: rgb(255, 255, 255); width: 8px; height: 8px; margin: 2px; border-radius: 100%; animation: react-spinners-BeatLoader-beat 0.7s 0.35s infinite linear; animation-fill-mode: both;"
      />
      <span
        style="display: inline-block; background-color: rgb(255, 255, 255); width: 8px; height: 8px; margin: 2px; border-radius: 100%; animation: react-spinners-BeatLoader-beat 0.7s 0s infinite linear; animation-fill-mode: both;"
      />
    </span>
  </div>
</div>
`;

exports[`LoadingSpinner renders LoadingSpinner correctly Light Mode 1`] = `
<div>
  <div
    class="css-1ffdipv"
  >
    <span
      style="display: inherit;"
    >
      <span
        style="display: inline-block; background-color: rgb(0, 0, 0); width: 8px; height: 8px; margin: 2px; border-radius: 100%; animation: react-spinners-BeatLoader-beat 0.7s 0s infinite linear; animation-fill-mode: both;"
      />
      <span
        style="display: inline-block; background-color: rgb(0, 0, 0); width: 8px; height: 8px; margin: 2px; border-radius: 100%; animation: react-spinners-BeatLoader-beat 0.7s 0.35s infinite linear; animation-fill-mode: both;"
      />
      <span
        style="display: inline-block; background-color: rgb(0, 0, 0); width: 8px; height: 8px; margin: 2px; border-radius: 100%; animation: react-spinners-BeatLoader-beat 0.7s 0s infinite linear; animation-fill-mode: both;"
      />
    </span>
  </div>
</div>
`;
